--- a/assets/html/proje.html
+++ b/assets/html/proje.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="../css/new.css">
     <link rel="stylesheet" href="/assets/icons/icons-1.10.5/bootstrap-icons.svg">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <title>Document</title>
 </head>
 
 <body>
-    <!-- <div class="priloder">
-    </div> -->
+    <div class="priloder">
+    </div>
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -54,11 +55,15 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row justify-content-center align-items-center mt-3">
-                <div class="col-12 col-sm-6">
-                    <h3>Welcome to Landkit.
-                        Develop anything.</h3>
-                    <p>Build a beautiful, modern website with flexible Bootstrap components built from scratch.</p>
+            <div class="row  align-items-center mt-5">
+                <div class=" col-12 col-sm-6 col-lg-6" style="width: 50%;">
+                    <h4 class="display-4 text-md-end">Welcome to <span class="text-primary">Landkit.</span>
+                        <br>
+                        Develop anything.
+                    </h4>
+                    <br>
+                    <p class="lead text-md-end text-center mb-5">Build a beautiful, modern website with flexible
+                        Bootstrap <br>components built from scratch.</p>
                     <div><button type="button" class="btn btn-primary btn-lg">Large button</button>
                         <button type="button" class="btn btn-secondary btn-lg">Large button</button>
                     </div>
@@ -127,7 +132,9 @@
 
                         </h2>
                         <p class="text-muted justify-content-center ">
-                            Using Landkit to build your site means never worrying about designing another page or cross browser compatibility. Our ever-growing library of components and pre-designed layouts will make your life easier. 
+                            Using Landkit to build your site means never worrying about designing another page or cross
+                            browser compatibility. Our ever-growing library of components and pre-designed layouts will
+                            make your life easier.
                         </p>
 
                     </div>
@@ -152,6 +159,25 @@
                             </div>
                         </div>
                     </div>
+
+                </div>
+            </div>
+            <div class="container-xxl">
+                <div class="row mt-6">
+                    <div class="col-12 col-sm-4 col-lg-6 text-md-end">
+                        <h4>We have lots of experience <br>
+                            <span class="text-primary">building Bootstrap themes.</span>
+                        </h4>
+                        <p class="text-muted mt-4">We've built well over a dozen Bootstrap themes and sold tens of
+                            thousands of copies. </p>
+                        <div><h5> <i class="bi bi-arrow-repeat fs-7 text-primary"></i>Bootstrap users since the beginning </h5>
+                            <p class="text-muted">We've been developing with Bootstrap since it was publicly released in 2011. </p>
+                        </div>
+                        <div></div>
+                    </div>
+                    <div class=" img-skewed img-skewed-start col-12 col-sm-4 col-lg-6">
+                        <img class="screenshot img-fluid img-skewed-item" src="../img/dashkit.jpg" alt="photo">
+                    </div>
                 </div>
             </div>
         </section>
@@ -163,12 +189,17 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11/lib/typed.min.js"></script>
 
 <script>
-var typed = new Typed('#typed-text', {
-   strings: ["developers.","designers.","founders"],
-   typeSpeed: 40,
-   backSpeed: 10,
-   loop: true
-});
+    $(document).ready(function () {
+        $(".priloder").fadeToggle(2000)
+    })
+
+
+    var typed = new Typed('#typed-text', {
+        strings: ["developers.", "designers.", "founders"],
+        typeSpeed: 40,
+        backSpeed: 10,
+        loop: true
+    });
 </script>
 
 
